Исправление замечаний.